--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ a{
     font-size: 3rem;
     margin-top: 0%;
     grid-area: heading;
+    text-align: center;
 }
 
 
@@ -133,7 +134,6 @@ header .nav-container a{
 
 /*Footer*/
 footer{
-    margin-top: 2rem;
     border-top: 1px black solid;
     background-color: wheat;
     display: flex;
@@ -171,6 +171,7 @@ footer .call-to-action{
 main{
     margin: 0%;
     padding: 0%;
+    padding-bottom: 2rem;
 }
 
 .carousel-inner{
@@ -194,6 +195,17 @@ main{
 }
 .nav-alternative-container .nav-alternative a img{
     width: 18rem;
+}
+main .heading-alternative{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+main .heading-alternative img{
+    max-width: 5rem;
+    padding-right: 1rem;
+    
 }
 .trending{
     display: flex;
@@ -270,15 +282,22 @@ main{
 .exp{
     padding: 1.5rem;
 }
-
+main .event-exp{
+    justify-content: center;
+    text-align: center;
+}
 .events-container{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    padding: 3rem 1rem 3rem 1rem;
 }
 .event{
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 .event-img{
     max-width: 4rem;
@@ -286,4 +305,87 @@ main{
 .text{
     padding-top: 1rem;
     text-align: center;
+}
+/*Media queries*/
+@media(width >1024px){
+    /*desktop*/
+    main .products .filtros-container .navbar{
+        display: none;
+    }
+    header .top-header .navbar-1 .container{
+        display: none;
+    }
+}
+@media (width <= 1024px){
+    /*Tablet*/
+    main .filtros{
+        display: none;
+    }
+    main .center-h{
+        padding: 2rem;
+    }
+    main .heading-alternative img{
+        display: none;
+    }
+}
+@media (width <=480px){
+    header .top-header .navbar-1 .container-fluid{
+        display: none;
+    }
+    header .top-header .nombre-empresa .logo{
+        display: none;
+    }
+    
+    main .carousel-container{
+        padding: 0rem;
+        width: 100%;
+        height: auto;
+    }
+    .nav-alternative-container{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+    .nav-alternative-container .nav-alternative{
+        width: auto;
+    }
+    .products{
+        flex-direction: column;
+        align-items: center;
+    }
+    .products .filtros-container{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+    .products .filtros-container .navbar{
+        width: 60%;
+    }
+    main{
+        background-color: beige;
+    }
+    main .center-h .heading{
+        font-size: 1.5rem;
+    }
+    main .explain-container{
+        display: flex;
+        flex-direction: column;
+        text-align: justify;
+    }
+    main .explain-container img{
+        width: 90%;
+    }
+    main .explain-container .img-container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    main .events-container{
+        flex-wrap: wrap;
+    }
+    .event{
+        width: 100%;
+        padding: 2rem 2rem;
+    }
 }
