--- a/scss/_products-style.scss
+++ b/scss/_products-style.scss
@@ -14,8 +14,7 @@ main{
         }
         .filtros{
             list-style-type: none;
-            justify-content: center;
-            align-items: center; 
+            @include center;
         }
     }
 } 
