--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ header .nav-container a {
 
 footer {
   border-top: 1px black solid;
-  background-color: #f5deb3;
+  background-color: rgb(245, 222, 179);
   display: flex;
   flex-direction: column;
 }
@@ -134,8 +134,8 @@ main .nav-alternative-container .nav-alternative a img {
 main .heading-alternative {
   display: flex;
   flex-direction: row;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 main .heading-alternative img {
   max-width: 5rem;
@@ -167,14 +167,14 @@ main .products .filtros-container {
 }
 main .products .filtros {
   list-style-type: none;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
 .explain-container {
   display: flex;
   flex-direction: row;
-  background-color: #f5deb3;
+  background-color: rgb(245, 222, 179);
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
@@ -189,8 +189,8 @@ main .products .filtros {
 }
 
 main .event-exp {
+  align-items: center;
   justify-content: center;
-  text-align: center;
 }
 
 .events-container {
@@ -219,8 +219,8 @@ main .text {
   border: 1px black solid;
   padding: 1rem;
   display: flex;
+  flex-direction: column;
   display: inline-block;
-  flex-direction: row;
   margin: 1rem;
 }
 .product-container .product-image {
@@ -230,12 +230,12 @@ main .text {
 .product-container .product-text {
   justify-content: left;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 .product-container .product-link {
   justify-content: end;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 @media (width > 1024px) {
@@ -298,6 +298,7 @@ main .text {
     width: auto;
   }
   main .products {
+    display: flex;
     flex-direction: column;
     align-items: center;
   }
@@ -319,8 +320,8 @@ main .text {
   }
   main .explain-container .img-container {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
   }
   main .explain-container .img-container img {
     width: 90%;
