--- a/scss/_events-style.scss
+++ b/scss/_events-style.scss
@@ -1,33 +1,27 @@
 .explain-container{
-    display: flex;
-    flex-direction: row;
-    background-color: #f5deb3;
+    @include flex-row;
+    background-color: $beige;
     padding-top: 1rem;
     padding-bottom: 1rem;
     .explain-content{
         padding: 1rem;
-        align-items: center;
-        justify-content: center;
+        @include center;
     }
 }
 .exp{
     padding: 1.5rem;
 }
 main .event-exp{
-    justify-content: center;
-    text-align: center;
+    @include center;
 }
 .events-container{
-    display: flex;
-    flex-direction: row;
+    @include flex-row;
     justify-content: space-evenly;
     padding: 3rem 1rem 3rem 1rem;
     .event{
         padding: 1rem;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+        @include flex-column;
+        @include center;
         .event-img{
             max-width: 4rem;
         }
