--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,11 +1,10 @@
 footer{
     border-top: 1px black solid;
-    background-color:#f5deb3;
+    background-color: $beige;
     display: flex;
     flex-direction: column;
     .call-to-action{
-        display: flex;
-        flex-direction: column;
+        @include flex-column;
         align-items: center;
     }
     .main-footer{
