--- a/scss/settings/_reset.scss
+++ b/scss/settings/_reset.scss
@@ -9,6 +9,9 @@
     margin: 0%;
     font-family: "Lexend";
 }
+main{
+  background-image: linear-gradient(to top, beige, $beige);
+}
 a{
   color: #000000;
 }
