--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@
   font-family: "Lexend";
 }
 
+main {
+  background-image: linear-gradient(to top, beige, rgb(245, 222, 179));
+}
+
 a {
   color: #000000;
 }
@@ -77,6 +81,10 @@ header .nav-container {
 }
 header .nav-container a {
   text-decoration: none;
+  padding: 0.3rem;
+}
+header .nav-container a:hover {
+  background-color: rgb(226, 208, 169);
 }
 
 footer {
@@ -128,8 +136,10 @@ main .nav-alternative-container .nav-alternative {
   height: auto;
   width: 30%;
 }
-main .nav-alternative-container .nav-alternative a img {
-  width: 18rem;
+main .nav-alternative-container .nav-alternative .nav-alternative-img:hover {
+  transform: scale(1.2, 1.2);
+  transition-duration: 500ms;
+  transition-timing-function: ease-in-out;
 }
 main .heading-alternative {
   display: flex;
@@ -171,45 +181,46 @@ main .products .filtros {
   justify-content: center;
 }
 
-.explain-container {
+main .explain-container {
   display: flex;
   flex-direction: row;
   background-color: rgb(245, 222, 179);
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
-.explain-container .explain-content {
+main .explain-container .explain-content {
   padding: 1rem;
   align-items: center;
   justify-content: center;
 }
-
-.exp {
+main .exp {
   padding: 1.5rem;
 }
-
 main .event-exp {
+  display: flex;
   align-items: center;
   justify-content: center;
 }
-
-.events-container {
+main .event-exp p {
+  align-items: center;
+  justify-content: center;
+}
+main .events-container {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   padding: 3rem 1rem 3rem 1rem;
 }
-.events-container .event {
+main .events-container .event {
   padding: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.events-container .event .event-img {
+main .events-container .event .event-img {
   max-width: 4rem;
 }
-
 main .text {
   padding-top: 1rem;
   text-align: center;
