--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -43,6 +43,10 @@ header{
         justify-content: space-evenly; 
         a{
             text-decoration: none;
+            padding: 0.3rem;
+        }
+        a:hover{
+            background-color: rgb(226, 208, 169);
         }
     }
 }
