--- a/scss/settings/_mq.scss
+++ b/scss/settings/_mq.scss
@@ -50,12 +50,14 @@
         display: flex;
         .nav-alternative{
            @include flex-column;
-            width: 45%;
+           flex-wrap: wrap;
+           @include center; 
+            width: 90%;
             a {
-                width: 100%;
+                width: 90%;
                
                 .nav-alternative-img{
-                    width: auto;
+                    width: 100%;
                 }
              }   
         }
@@ -77,12 +79,15 @@
     }
     main .explain-container{
         @include flex-column;
+        @include center;
         text-align: justify;
         .img-container{
             display: flex;
             @include center;
+            width: 80%;
+            padding:0rem;
             img{
-                width: 90%;
+                width: 100%;
             }
         }
     }
